--- a/roots/item1.html
+++ b/roots/item1.html
@@ -4,19 +4,24 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>CS50B Week04</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" >
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
+  <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
   <link rel="stylesheet" href="../css/item1.css">
+    <title>Hip-Hop & Rap</title>
 </head>
 
 <body>
 
-  <nav class="navbar navbar-expand-lg sticky-top bg-dark">
+ <div class="header-container">
+<div class="scroll-progress mt-1"></div>
+</div>
+  
+  <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">Fallout Music Co.</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -24,7 +29,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav ms-auto">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
           </li>
@@ -39,16 +44,14 @@
               <hr>
               <li><a class="dropdown-item" href="../roots/item3.html">Alternative</a></li>
               <hr>
-              <li><a class="dropdown-item" href="../roots/item4.html">Oldies</a></li>
-              <hr>
-              <li><a class="dropdown-item" href="../roots/item5.html">Country</a></li>
+              <li><a class="dropdown-item" href="../roots/item4.html">Country</a></li>
             </ul>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="../roots/catalog.html">Catalog List</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="../roots/about.html">About</a>
+            <a class="nav-link active" aria-current="page" href="../roots/about.html">About & Credits</a>
           </li>
         </ul>
       </div>
@@ -58,16 +61,15 @@
   <div id="carouselExampleCaptions" class="carousel slide">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="../assets/images/peakpx(68).jpg" class="d-block w-100" alt="rap">
+      <img src="../assets/images/peakpx(68).jpg" class=" w-100" alt="rap">
       <div class="carousel-caption d-flex flex-column h-100 align-items-center justify-content-center">
         <h2 class="bg-dark bg-opacity-50 py-2 px-4">Fallout Music Co.</h2>
-        <p class="bg-dark bg-opacity-50 py-2 px-4">The following images are some of our featured artists for the Hip-Hop & Rap category
-          slide.</p>
+        <p class="bg-dark bg-opacity-50 py-2 px-4">The following images are some of my favorite artists for the Hip-Hop & Rap category</p>
         <a href="../roots/item1.html" class="btn btn-light px-4 py-2 rounded-0">Learn More</a>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="../assets/images/peakpx(54).jpg" class="d-block w-100" alt="hip">
+      <img src="../assets/images/peakpx(54).jpg" class=" w-100" alt="hip">
       <div class="carousel-caption d-flex flex-column h-100 align-items-center justify-content-center">
         <h2 class="bg-dark bg-opacity-50 py-2 px-4">Playboi Carti</h2>
         <p class="bg-dark bg-opacity-50 py-2 px-4">Playboi Carti is an american rapper with his top hit being wokeuplikethis ft. Lil Uzi Vert</p>
@@ -75,7 +77,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="../assets/images/peakpx(52).jpg" class="d-block w-100" alt="hop">
+      <img src="../assets/images/peakpx(52).jpg" class=" w-100" alt="hop">
       <div class="carousel-caption d-flex flex-column h-100 align-items-center justify-content-center">
         <h2 class="bg-dark bg-opacity-50 py-2 px-4">XXXTentacion</h2>
         <p class="bg-dark bg-opacity-50 py-2 px-4">XX is a deceased rapper that left more than a legend or legacy behind. His music continues to impact all his listeners to this day.</p>
@@ -83,7 +85,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="../assets/images/peakpx(72).jpg" class="d-block w-100" alt="pic">
+      <img src="../assets/images/peakpx(72).jpg" class=" w-100" alt="pic">
       <div class="carousel-caption d-flex flex-column h-100 align-items-center justify-content-center">
         <h2 class="bg-dark bg-opacity-50 py-2 px-4">Nipsey Hussle</h2>
         <p class="bg-dark bg-opacity-50 py-2 px-4">Nipsey passed away and left us with a long-lasting legend, legacy and movement. We celebrate him and his memeory with his music.</p>
@@ -103,32 +105,32 @@
 <section id="home">
   <div class="parallax-inner text-center">
                 <br>
-                <h1>In Rememberance</h1>
-    <h2>We have lost several talented artists that weren't just doing it for the money</h2>
+                <h1>The Marathon</h1>
+    <h2>Nipsey sets a whole vibe. I'm always in the mood to hear his verses.</h2>
                 <br>
   </div>
 </section>
 <section id="about">
   <div class="parallax-inner text-center">
                 <br>
-                <h1>For those we have lost</h1>
-    <h2>These artists cared about their fans and our communities</h2>
+                <h1>Keeping their Legacy</h1>
+    <h2>Juice World and XX are other artists I have always loved listening to.</h2>
                 <br>
   </div>
 </section>
 <section id="why">
   <div class="parallax-inner text-center">
                 <br>
-                <h1>We will not forget you</h1>
-    <h2>They always remembered where they came from and who they were before the fame</h2>
+                <h1>Aim for the moon</h1>
+    <h2>Shoot for the Stars, Aim for the Moon. His music is for sure my favorite vibe.</h2>
                 <br>
   </div>
 </section>
 <section id="discover">
   <div class="parallax-inner text-center">
                 <br>
-                <h1>Gone but never forgotten</h1>
-    <h2>And through their music we feel the love and give it back to them</h2>
+                <h1>Best Collab</h1>
+    <h2>These two are for sure my favorite when they collaborate</h2>
                 <br>
   </div>
 </section>
@@ -319,7 +321,7 @@
 </footer>
 <!-- Footer -->    
     
-
+ <script src="../add-content/item1.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
     crossorigin="anonymous"></script>
